docs: Criando documentação para o recurso ProjectType
